--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@
 .env.test.local
 .env.production.local
 news-api-key.js
+article-info-api-key.js
+watson-tone-api-credentials.js
 
 npm-debug.log*
 yarn-debug.log*
