--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.4.0",
     "redux": "^4.0.0",
-    "router": "^1.3.2"
+    "router": "^1.3.2",
+    "watson-developer-cloud": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,6 +20,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "redux-logger": "^3.0.6"
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "jest": "^23.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.1"
   }
 }
