--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "jest": "^23.1.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js"
+    ]
   }
 }
